Tabela e sistema em função

--- a/frontend/js/views/home.html
+++ b/frontend/js/views/home.html
@@ -3,5 +3,8 @@
     <p>Você foi autenticado com sucesso!</p>
 
     <textarea ng-model="transacoes.ia"></textarea>
+
+    <a ui-sref="transacoes">Transações</a>
+    
 <br>
 <input type="button" value="Registrar" ng-click="simularIa()">
